--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -1,5 +1,24 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    <h1>Seja bemvindo </h1>
+<div class="row">
+  <div class="col">
+    Column
+  </div>
+  <div class="col">
+    Ola {{ usuario.funcionario.nome }}
+    <a href="{% url 'list_funcionarios' %}">Gerenciar funcionario</a>
+  </div>
+  <div class="col">
+    <a href="{% url 'logout' %}">Sair</a>
+
+    {% if usuario.funcionario.empresa %}
+    <a href="{% url 'update_empresa' usuario.funcionario.empresa.id %}">
+      Editar empresa
+    </a>
+    {% else %}
+    <a href="{% url 'create_empresa' %}">Criar empresa</a>
+    {% endif %}
+  </div>
+</div>
 {% endblock main %}
