editar funcionario ok

--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -2,6 +2,8 @@
 
 {% block main %}
     {% for funcionario in object_list %}
-        {{ funcionario }} <br />
+        <a href="{% url 'update_funcionario' funcionario.pk %}">
+            {{ funcionario }} <br/>
+        </a>
     {% endfor %}
 {% endblock main %}
