--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -2,6 +2,11 @@
 
 {% block main %}
     <h1>Listagem de funcionarios </h1>
+
+    <a href="{% url 'create_funcionario' %}" class="btn btn-success">Novo funcionario</a>
+
+    <br/>
+
     {% for funcionario in object_list %}
         <a href="{% url 'update_funcionario' funcionario.pk %}">
             {{ funcionario }}
@@ -10,7 +15,6 @@
         <a href="{% url 'delete_funcionario' funcionario.pk %}">
             Excluir
         </a>
-
         <br />
     {% endfor %}
 {% endblock main %}
