--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -7,7 +7,10 @@
   </div>
   <div class="col">
     Ola {{ usuario.funcionario.nome }}
-    <a href="{% url 'list_funcionarios' %}">Gerenciar funcionario</a>
+    <br />
+    <a class="btn btn-primary" href="{% url 'list_funcionarios' %}">Gerenciar Funcionario</a>
+    <br />
+    <a class="btn btn-primary" href="{% url 'list_departamentos' %}">Gerenciar Departamentos</a>
   </div>
   <div class="col">
     <a href="{% url 'logout' %}">Sair</a>
