--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block main %}
+
+<h1> Cadastro de funcionarios </h1>
+
 <form action="" method="post">
     {% csrf_token %}
 
-    {{ form }}
+    {{ form.as_div }}
 
     <button class="btn btn-success" type="submit">Salvar</button>
 </form>
