--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -11,6 +11,8 @@
     <a class="btn btn-primary" href="{% url 'list_funcionarios' %}">Gerenciar Funcionario</a>
     <br />
     <a class="btn btn-primary" href="{% url 'list_departamentos' %}">Gerenciar Departamentos</a>
+    <br />
+    <a class="btn btn-info" href="{% url 'list_registro_hora_extra' %}">Gerenciar Banco de horas</a>
   </div>
   <div class="col">
     <a href="{% url 'logout' %}">Sair</a>
