--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_confirm_delete.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_confirm_delete.html
@@ -4,7 +4,7 @@
 <form action="" method="post">
     {% csrf_token %}
 
-    <h1> Tem certeza que deseja excluir esse {{ object }} ?</h1>
+    <h1> Tem certeza que deseja excluir registro {{ object }} ?</h1>
 
     {{ form }}
 
