--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -3,7 +3,7 @@
 {% block main %}
 <div class="row">
   <div class="col">
-    Column
+    Nessa coluna não tem nada
   </div>
   <div class="col">
     Ola {{ usuario.funcionario.nome }}
