add quantidade de horas

--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -41,5 +41,7 @@
         {% endfor %}
     </ul>
 
+    <h3>Total de horas extras: {{ object.total_horas_extras }}</h3>
+
 </div>
 {% endblock main %}
