--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -36,7 +36,9 @@
     <ul>
         {% for horaextra in object.registrohoraextra_set.all %}
         <li>
-            {{ horaextra }} ({{ horaextra.horas }} horas)
+            <a href="{% url 'update_registro_hora_extra' horaextra.id %}">
+                {{ horaextra }} ({{ horaextra.horas }} horas)
+            </a>
         </li>
         {% endfor %}
     </ul>
